<resources>
    <string name="app_name">Woah</string>
    <string name="your_email">Your email</string>
    <string name="let_go_to_chatting_with_woah">Let go to chatting with Woah</string>
    <string name="your_password">Your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="background">background</string>
    <string name="make_your_own_nconversation">Make your Own \nConversation</string>
    <string name="don_t_have_any_account_please">Don\'t have any account? please</string>
    <string name="register">Register</string>
    <string name="image">image</string>
    <string name="free_regiser_all_time">Free Regiser all time</string>
    <string name="let_go_register_yourself">Let go register yourself</string>
    <string name="full_name">Full name</string>
    <string name="back_to_login">Back to login</string>
    <string name="woah_apps_v_0_0_1">Woah Apps v.0.0.1</string>
    <string name="sign_out">Sign out</string>
    <string name="new_message">New message</string>
    <string name="username">username</string>
    <string name="start_typing">Start typing</string>
    <string name="message_of_receiver">message of receiver</string>
    <string name="your_own_message_has_shown_here_dude">your own message has shown here dude!</string>
    <string name="change_name">Change name</string>
    <string name="change_number">Change number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_email">Change email</string>
</resources>