<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_new_message"
            android:title="@string/new_message"
            android:icon="@drawable/ic_baseline_chat_24"
            android:iconTint="@color/colorPrimary"
            />
    </group>



        <item
            android:title="Profile">

            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_change_name"
                        android:title="@string/change_name"
                        android:icon="@drawable/ic_baseline_person_24"
                        android:iconTint="@color/colorPrimary"/>

                    <item
                        android:id="@+id/menu_change_email"
                        android:title="@string/change_email"
                        android:icon="@drawable/ic_baseline_email_24"
                        android:iconTint="@color/colorPrimary"/>

                    <item
                        android:id="@+id/change_number"
                        android:title="@string/change_number"
                        android:icon="@drawable/common_full_open_on_phone"
                        android:iconTint="@color/colorPrimary" />
                </group>

            </menu>

        </item>







    <item android:title="Action">

        <menu>

            <item
                android:id="@+id/menu_sign_out"
                android:title="@string/sign_out"
                android:icon="@drawable/logout_24"
                android:iconTint="@color/colorPrimary" />

        </menu>

    </item>




</menu>