<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@drawable/bg_gradient"
        android:contentDescription="@string/background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/free_regiser_all_time"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:text="@string/let_go_register_yourself" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:maxLength="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:layout_below="@+id/card_view_login"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:onClick="backLogin"
        android:textColor="@android:color/black"
        tools:ignore="OnClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="@string/woah_apps_v_0_0_1" />





</RelativeLayout>