<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="35dp"
    android:layout_marginEnd="35dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:text="@string/let_go_to_chatting_with_woah" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>